@@ -44,6 +44,7 @@ public class Button extends FormControl {
         return BUTTON_TYPE;
     }
 
+
     Button( WebForm form ) {
         super( form );
     }
@@ -52,6 +53,8 @@ public class Button extends FormControl {
     Button( WebForm form, Node node ) {
         super( form, node );
         _onClickEvent = NodeUtils.getNodeAttribute( node, "onclick" );
+
+        supportAttribute( "disabled" );
     }
 
 
@@ -117,6 +120,15 @@ public class Button extends FormControl {
 
         public void click() throws IOException, SAXException {
             doButtonAction();
+        }
+
+
+        public void set( String propertyName, Object value ) {
+            if (propertyName.equalsIgnoreCase( "disabled" )) {
+                setDisabled( value instanceof Boolean && ((Boolean) value).booleanValue() );
+            } else {
+                super.set( propertyName, value );
+            }
         }
     }
 
